--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-h1,h2,h3 {
+h1{
+    border-style: solid;
+    border-radius : 15px ; width: 500px;
+    margin: auto;
+    border-width: 4px;
     text-align: center;
 }
+
+h2,h3 {
+    text-align: center;
+}
+
 p {
+    text-align: justify;
     text-align: center;
+    border: 3px solid ;
+    border-radius: 15px; width: 700px; height: auto;
+    margin: auto;
+    ;
 }
+
 div {
     text-align: center;
 }
